<resources>
    <string name="app_name">Joun</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="ToSignUp">Sign Up</string>
    <string name="minimum_password">The password should be more than six characters</string>
    <string name="auth_failed">Logging in Failed</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="signin_with_google">Sign in with Google</string>


</resources>
